feat: make API base URL and CORS origins configurable via env vars
- Frontend: VITE_API_BASE_URL env var overrides the hardcoded
  localhost API URL, so the same build works against any backend
  once set at build time
- Backend: allowed CORS origins now come from ALLOWED_ORIGINS
  (comma-separated), defaulting to localhost:5173, so adding a
  deployed frontend origin doesn't require a code change